testsuite/tests/grammar/invalid_transform/error_node.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule stmt_rule <- list*(or(Def("def" name) | Error(@identifier)))
    name <- Name(@identifier)
}

class FooNode implements Node[FooNode] {
}

class Def : FooNode {
    @parse_field name: Name
}

class Name : FooNode implements TokenNode {
}

class Error : FooNode implements ErrorNode {
}
